--- a/marketing.html
+++ b/marketing.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="landing-page.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="cyberlab.html">Hexterika Cyberlab</a></li>
                 <li><a href="designer.html">Hexterika Designer</a></li>
                 <li><a href="marketing.html">Hexterika Marketing</a></li>
