--- a/designer.html
+++ b/designer.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="cyberlab.html">Hexterika Cyberlab</a></li>
-                <li><a href="designer.html">Hexterica Designer</a></li>
+                <li><a href="designer.html">Hexterika Designer</a></li>
                 <li><a href="marketing.html">Hexterika Marketing</a></li>
             </ul>
         </nav>
