Add my Professional Headshot 1 to assets/images/hexterika-breaks-free. Complete the HTML aspect of the index.html.

--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
     <main>
         <section>
             <h1>Welcome to Hexterika Breaks Free</h1>
-            <p>Professional Headshot Photo</p>
-            <p>tagline - short and simple</p>
-            <p>See My Full Qualification: About Me Professional</p>
+            <img src="assets/images/hexterika-breaks-free/myProfessionalHeadshot1.jpg"/>
+            <p>Beyond Boundaries — Creative, Secure, and Strategic Services at Hexterika Breaks Free.</p>
+            <p>See My Full Qualification</p>
+            <a href="https://github.com/sangsongthong-hexterika/AboutMeProfessional">About Me Professional</a>
         </section>
         <section>
+            <p>Secure your system at</p>
             <a href="cyberlab.html">Hexterika Cyberlab</a>
+            <p>Attract attention to your website with custom design at</p>
             <a href="designer.html">Hexterika Designer</a>
+            <p>Grows your present on social media with</p>
             <a href="marketing.html">Hexterika Marketing</a>
         </section>
     </main>
@@ -25,6 +29,5 @@
     <footer>
         <p>&copy; 2025 Hexterika Break Free. All rights reserved.</p>
     </footer>
-
 </body>
 </html>
