Add target=_blank rel=noopener noreferrer to all external links. Add blank CSS files.

--- a/designer.html
+++ b/designer.html
@@ -32,11 +32,13 @@
             <p>Screenshots Snippets - Use Carosole</p>
             <p>Brief explanation</p>
             <p>Share my Figma links</p>
+            <a href="https://example.com" target="_blank" rel="noopener noreferrer">Site</a>
         </section>
         <section>
             <h1>Service</h1>
             <p>Brief or full service explanation</p>
             <p>Send to Fiverr</p>
+            <a href="https://example.com" target="_blank" rel="noopener noreferrer">Site</a>
         </section>
         <section>
             <h1>Contact</h1>
@@ -56,9 +58,9 @@
     </section>
     <section>
         <h1>Social Medias</h1>
-        <a href="https://www.linkedin.com/in/sangsongthong-chantaranothai/">LinkedIn</a>
-        <a href="https://www.facebook.com/share/1AYY5bVfaa">Facebook</a>
-        <a href="https://www.instagram.com/hexterika.designer?igsh=MW83dXM4aG92amtrNw==">Instagram</a>
+        <a href="https://www.linkedin.com/in/sangsongthong-chantaranothai/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+        <a href="https://www.facebook.com/share/1AYY5bVfaa" target="_blank" rel="noopener noreferrer">Facebook</a>
+        <a href="https://www.instagram.com/hexterika.designer?igsh=MW83dXM4aG92amtrNw==" target="_blank" rel="noopener noreferrer">Instagram</a>
         <p>Use icons + hover effect to describe the icons</p>
     </section>
     </main>
