--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <img src="assets/images/hexterika-breaks-free/myProfessionalHeadshot1.jpg"/>
             <p>Beyond Boundaries — Creative, Secure, and Strategic Services at Hexterika Breaks Free.</p>
             <p>See My Full Qualification</p>
-            <a href="https://github.com/sangsongthong-hexterika/AboutMeProfessional">About Me Professional</a>
+            <a href="https://github.com/sangsongthong-hexterika/AboutMeProfessional" target="_blank" rel="noopener noreferrer">About Me Professional</a>
         </section>
         <section>
             <p>Secure your system at</p>
