--- a/marketing.html
+++ b/marketing.html
@@ -37,6 +37,7 @@
             <h1>Service</h1>
             <p>Brief or full service explanation</p>
             <p>Send to Fiverr</p>
+            <a href="https://example.com" target="_blank" rel="noopener noreferrer">Site</a>
         </section>
         <section>
             <h1>Projects</h1>
@@ -59,7 +60,7 @@
     </section>
     <section>
         <h1>Social Medias</h1>
-        <a href="https://www.linkedin.com/in/sangsongthong-chantaranothai/">LinkedIn</a>
+        <a href="https://www.linkedin.com/in/sangsongthong-chantaranothai/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
         <a href="">Facebook</a>
         <a href="">Instagram</a>
         <p>Use icons + hover effect to describe the icons</p>
