--- a/cyberlab.html
+++ b/cyberlab.html
@@ -43,6 +43,11 @@
                 <h1>Projects</h1>
                 <p>These GitHub repositories showcase my write-ups and walkthroughs from various security labs. They offer step-by-step guides and insights into the penetration testing process, presented in an easy-to-follow, blog-style format.</p>
                 <p>Share GitHub links</p>
+                <a href="https://example.com" target="_blank" rel="noopener noreferrer">Mock Penetration Testing report</a>
+                <a href="https://example.com" target="_blank" rel="noopener noreferrer">TryHackMe walkthroughs</a>
+                <a href="https://example.com" target="_blank" rel="noopener noreferrer">Port Swigger walkthroughs</a>
+                <a href="https://example.com" target="_blank" rel="noopener noreferrer">IT Cybersecurity Oneshots</a>
+                <a href="https://example.com" target="_blank" rel="noopener noreferrer">Active Directory Virtual Home Lab 1</a>
             </section>
             <section>
                 <h1>Contact</h1>
@@ -56,17 +61,17 @@
                     <label for="message">Message:</label>
                     <textarea id="message" name="message" rows="13" required></textarea>
                     <br>
-                    <button type="submit">Send</button>
+                    <button type="submit">Get In Touch</button>
                   </form>
             </section>
         </section>
         <section>
             <h1>Social Medias</h1>
-            <a href="https://www.linkedin.com/in/sangsongthong-chantaranothai/">LinkedIn</a>
-            <a href="https://www.facebook.com/share/165WozGYNW/">Facebook</a>
-            <a href="https://www.instagram.com/hexterika.cyberlab?igsh=cTRoaGxmNGxrcmMz">Instagram</a>
-            <a href="https://github.com/sangsongthong-hexterika">GitHub</a>
-            <a href="https://tryhackme.com/p/gexter5thm">TryHackMe</a>
+            <a href="https://www.linkedin.com/in/sangsongthong-chantaranothai/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+            <a href="https://www.facebook.com/share/165WozGYNW/" target="_blank" rel="noopener noreferrer">Facebook</a>
+            <a href="https://www.instagram.com/hexterika.cyberlab?igsh=cTRoaGxmNGxrcmMz" target="_blank" rel="noopener noreferrer">Instagram</a>
+            <a href="https://github.com/sangsongthong-hexterika" target="_blank" rel="noopener noreferrer">GitHub</a>
+            <a href="https://tryhackme.com/p/gexter5thm" target="_blank" rel="noopener noreferrer">My TryHackMe Profile</a>
             <p>Use icons + hover effect to describe the icons</p>
         </section>
     </main>
