--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1>Welcome to Hexterika Breaks Free</h1>
             <img src="assets/images/hexterika-breaks-free/myProfessionalHeadshot1.jpg"/>
             <p>Beyond Boundaries — Creative, Secure, and Strategic Services at Hexterika Breaks Free.</p>
-            <p>See My Full Qualification</p>
+            <h2>See My Full Qualification</h2>
             <a href="https://github.com/sangsongthong-hexterika/AboutMeProfessional" target="_blank" rel="noopener noreferrer">About Me Professional</a>
         </section>
         <section>
@@ -23,6 +23,8 @@
             <a href="designer.html">Hexterika Designer</a>
             <p>Grows your present on social media with</p>
             <a href="marketing.html">Hexterika Marketing</a>
+            <p>Contact me directly without needing to browse the rest of my website.</p>
+            <a href="contact.html">Contact</a>
         </section>
     </main>
     <!-- Footer Section -->
