--- a/marketing.html
+++ b/marketing.html
@@ -16,6 +16,7 @@
                 <li><a href="cyberlab.html">Hexterika Cyberlab</a></li>
                 <li><a href="designer.html">Hexterika Designer</a></li>
                 <li><a href="marketing.html">Hexterika Marketing</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
