Add link to linkedin

--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
         <section>
             <h2>Get In Touch: Other Channels!</h2>
                 <ul>
-                    <li><a href="https://example.com" target="_blank" rel="noopener noreferrer"><strong>LinkedIn </strong><em>Prefer!</em></a></li>
+                    <li><a href="https://www.linkedin.com/in/sangsongthong-chantaranothai/" target="_blank" rel="noopener noreferrer"><strong>LinkedIn </strong><em>Prefer!</em></a></li>
                     <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">My Portfolio Profile Page</a></li>
                 </ul>
             <h3>For Cybersecurity Topic</h3>
