Add my US Number

--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
                     <li><p><strong>Discord: </strong>#gexter5htb - may take some time to reply.</p></li>
                     <li><a href="https://x.com/gexterL"><strong>X (formerly Twitter) </strong>– may take some time to reply.</a></li>
                     <li><a href="tel:+66982568888">Call me +66(98)256-8888 (Thai Number)</a></li>
-                    <li><a href="tel:+1xxxxxxxxx">Call me +1(303)834-7944 (US Number)</a></li>
+                    <li><a href="tel:+13038347944">Call me +1(303)834-7944 (US Number)</a></li>
                     <p><em>Serious job offers only — this number costs me to keep active.</em></p>
                 </ul>
         </section>
