Make sure all the links in contact.html are correct. I still need to configure the contact form further.

--- a/contact.html
+++ b/contact.html
@@ -55,18 +55,18 @@
             <h2>Get In Touch: Other Channels!</h2>
                 <ul>
                     <li><a href="https://www.linkedin.com/in/sangsongthong-chantaranothai/" target="_blank" rel="noopener noreferrer"><strong>LinkedIn </strong><em>Prefer!</em></a></li>
-                    <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">My Portfolio Profile Page</a></li>
+                    <li><a href="https://github.com/sangsongthong-hexterika/AboutMeProfessional" target="_blank" rel="noopener noreferrer">My Portfolio Profile Page</a></li>
                 </ul>
             <h3>For Cybersecurity Topic</h3>
                 <ul>
-                    <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">Hexterika Cyberlab Facebook</a></li>
-                    <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">Hexterika Cyberlab Instagram</a></li>
+                    <li><a href="https://www.facebook.com/share/165WozGYNW/" target="_blank" rel="noopener noreferrer">Hexterika Cyberlab Facebook</a></li>
+                    <li><a href="https://www.instagram.com/hexterika.cyberlab?igsh=cTRoaGxmNGxrcmMz" target="_blank" rel="noopener noreferrer">Hexterika Cyberlab Instagram</a></li>
                 </ul>
                 <p>More info about my projects and services available on the services page.</p>
             <h3>For UI/UX design using Figma</h3>
                 <ul>
-                    <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">Hexterika Designer Facebook</a></li>
-                    <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">Hexterika Designer Instagram</a></li>
+                    <li><a href="https://www.facebook.com/share/1AYY5bVfaa" target="_blank" rel="noopener noreferrer">Hexterika Designer Facebook</a></li>
+                    <li><a href="https://www.instagram.com/hexterika.designer?igsh=MW83dXM4aG92amtrNw==" target="_blank" rel="noopener noreferrer">Hexterika Designer Instagram</a></li>
                 </ul>
                 <p>More info about my projects and services available on the services page.</p>
             <h3>For other inquiries</h3>
