Structure all the html in cyberlab, designer, and marketing. All text and links are placeholder.

--- a/cyberlab.html
+++ b/cyberlab.html
@@ -38,20 +38,25 @@
             <section>
                 <h1>Service</h1>
                 <p>Brief or full service explanation</p>
+                <p>Coming Soon!</p>
                 <p>Send to Fiverr</p>
             </section>
             <section>
-                <h1>Projects</h1>
+                <h2>Projects</h2>
                 <p>These GitHub repositories showcase my write-ups and walkthroughs from various security labs. They offer step-by-step guides and insights into the penetration testing process, presented in an easy-to-follow, blog-style format.</p>
                 <p>Share GitHub links</p>
-                <a href="https://example.com" target="_blank" rel="noopener noreferrer">Mock Penetration Testing report</a>
-                <a href="https://example.com" target="_blank" rel="noopener noreferrer">TryHackMe walkthroughs</a>
-                <a href="https://example.com" target="_blank" rel="noopener noreferrer">Port Swigger walkthroughs</a>
-                <a href="https://example.com" target="_blank" rel="noopener noreferrer">IT Cybersecurity Oneshots</a>
-                <a href="https://example.com" target="_blank" rel="noopener noreferrer">Active Directory Virtual Home Lab 1</a>
+                <ul>
+                    <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">Mock Penetration Testing report</a></li>
+                    <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">TryHackMe walkthroughs</a></li>
+                    <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">Port Swigger walkthroughs</a></li>
+                    <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">IT Cybersecurity Oneshots</a></li>
+                    <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">Active Directory Virtual Home Lab 1</a></li>
+                    <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">Bugcrowd Profile</a></li>
+                    <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">Bug Bounty Report Template</a></li>
+                </ul>
             </section>
             <section>
-                <h1>Contact</h1>
+                <h2>Contact</h2>
                 <form action="https://formspree.io/f/xovqzgke" method="POST">
                     <label for="name">Name:</label>
                     <input type="text" id="name" name="name" required>
@@ -67,19 +72,21 @@
             </section>
         </section>
         <section>
-            <h1>Social Medias</h1>
-            <a href="https://www.linkedin.com/in/sangsongthong-chantaranothai/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
-            <a href="https://www.facebook.com/share/165WozGYNW/" target="_blank" rel="noopener noreferrer">Facebook</a>
-            <a href="https://www.instagram.com/hexterika.cyberlab?igsh=cTRoaGxmNGxrcmMz" target="_blank" rel="noopener noreferrer">Instagram</a>
-            <a href="https://github.com/sangsongthong-hexterika" target="_blank" rel="noopener noreferrer">GitHub</a>
-            <a href="https://tryhackme.com/p/gexter5thm" target="_blank" rel="noopener noreferrer">My TryHackMe Profile</a>
+            <h2>Social Medias</h2>
+            <ul>
+                <li><a href="https://www.linkedin.com/in/sangsongthong-chantaranothai/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+                <li><a href="https://www.facebook.com/share/165WozGYNW/" target="_blank" rel="noopener noreferrer">Facebook</a></li>
+                <li><a href="https://www.instagram.com/hexterika.cyberlab?igsh=cTRoaGxmNGxrcmMz" target="_blank" rel="noopener noreferrer">Instagram</a></li>
+                <li><a href="https://github.com/sangsongthong-hexterika" target="_blank" rel="noopener noreferrer">GitHub</a></li>
+                <li><a href="https://tryhackme.com/p/gexter5thm" target="_blank" rel="noopener noreferrer">TryHackMe Profile</a></li>
+            </ul>
             <p>Use icons + hover effect to describe the icons</p>
         </section>
     </main>
         
     <!-- Footer Section -->
     <footer>
-        <strong>&copy; 2025 Hexterika Break Free. All rights reserved.</strong>
+        <p><strong>&copy; 2025 Hexterika Break Free. All rights reserved.</strong></p>
     </footer>
 
 </body>
