--- a/designer.html
+++ b/designer.html
@@ -29,20 +29,21 @@
             <p>Basically a short introduction paragraph or a few paragraphs.</p>
         </section>
         <section>
-            <h1>Sample Works</h1>
+            <h2>Sample Works</h2>
             <p>Screenshots Snippets - Use Carosole</p>
             <p>Brief explanation</p>
             <p>Share my Figma links</p>
-            <a href="https://example.com" target="_blank" rel="noopener noreferrer">Site</a>
+            <a href="https://example.com" target="_blank" rel="noopener noreferrer">Figma</a>
         </section>
         <section>
-            <h1>Service</h1>
+            <h2>Service</h2>
             <p>Brief or full service explanation</p>
+            <p>Coming Soon!</p>
             <p>Send to Fiverr</p>
-            <a href="https://example.com" target="_blank" rel="noopener noreferrer">Site</a>
+            <a href="https://example.com" target="_blank" rel="noopener noreferrer">Fiverr</a>
         </section>
         <section>
-            <h1>Contact</h1>
+            <h2>Contact</h2>
             <form action="https://formspree.io/f/xovqzgke" method="POST">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
@@ -56,19 +57,21 @@
                 <button type="submit">Send</button>
               </form>
         </section>
-    </section>
     <section>
-        <h1>Social Medias</h1>
-        <a href="https://www.linkedin.com/in/sangsongthong-chantaranothai/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
-        <a href="https://www.facebook.com/share/1AYY5bVfaa" target="_blank" rel="noopener noreferrer">Facebook</a>
-        <a href="https://www.instagram.com/hexterika.designer?igsh=MW83dXM4aG92amtrNw==" target="_blank" rel="noopener noreferrer">Instagram</a>
+        <h2>Social Medias</h2>
+        <ul>
+            <li><a href="https://www.linkedin.com/in/sangsongthong-chantaranothai/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+            <li><a href="https://www.facebook.com/share/1AYY5bVfaa" target="_blank" rel="noopener noreferrer">Facebook</a></li>
+            <li><a href="https://www.instagram.com/hexterika.designer?igsh=MW83dXM4aG92amtrNw==" target="_blank" rel="noopener noreferrer">Instagram</a></li>
+            <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">Dribbble</a></li>
+        </ul>
         <p>Use icons + hover effect to describe the icons</p>
     </section>
     </main>
 
     <!-- Footer Section -->
     <footer>
-        <p>&copy; 2025 Hexterika Break Free. All rights reserved.</p>
+        <p><strong>&copy; 2025 Hexterika Break Free. All rights reserved.</strong></p>
     </footer>
 
 </body>
