Links CSS files to their respective HTML files

--- a/cyberlab.html
+++ b/cyberlab.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hexterika Breaks Free</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/base.css">
+    <link rel="stylesheet" href="assets/css/cyberlab.css">
 </head>
 <body>
 
@@ -86,7 +87,7 @@
         
     <!-- Footer Section -->
     <footer>
-        <p><strong>&copy; 2025 Hexterika Break Free. All rights reserved.</strong></p>
+        <p><strong>&copy; 2025 Hexterika Breaks Free. All rights reserved.</strong></p>
     </footer>
 
 </body>
