--- a/designer.html
+++ b/designer.html
@@ -71,7 +71,7 @@
 
     <!-- Footer Section -->
     <footer>
-        <p><strong>&copy; 2025 Hexterika Break Free. All rights reserved.</strong></p>
+        <p><strong>&copy; 2025 Hexterika Breaks Free. All rights reserved.</strong></p>
     </footer>
 
 </body>
