--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hexterika Breaks Free</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/base.css">
+    <link rel="stylesheet" href="assets/css/index.css">
 </head>
 <body>
     <!-- Main Content (Grid Layout) -->
     <main>
         <section>
             <h1>Welcome to Hexterika Breaks Free</h1>
-            <img src="assets/images/hexterika-breaks-free/myProfessionalHeadshot1.jpg"/>
+            <img src="assets/images/hexterika-breaks-free/myProfessionalHeadshot1.jpg" alt="Professional Headshot of Sangsongthong"/>
             <p>Beyond Boundaries — Creative, Secure, and Strategic Services at Hexterika Breaks Free.</p>
             <h2>See My Full Qualification</h2>
             <a href="https://github.com/sangsongthong-hexterika/AboutMeProfessional" target="_blank" rel="noopener noreferrer">About Me Professional</a>
@@ -29,7 +30,7 @@
     </main>
     <!-- Footer Section -->
     <footer>
-        <p>&copy; 2025 Hexterika Break Free. All rights reserved.</p>
+        <p><strong>&copy; 2025 Hexterika Breaks Free. All rights reserved.</strong></p>
     </footer>
 </body>
 </html>
