Add pictures into marketing images assets. Add why choose me in cyberlab, designer, and marketing html files

--- a/marketing.html
+++ b/marketing.html
@@ -41,6 +41,13 @@
         </section>
         <section>
             <h2>Projects</h2>
+            <p>Add screenshots</p>
+        </section>
+        <section>
+            <h2>Why Choose Me?</h2>
+            <p></p>
+            <p>See my full qualification: </p>
+            <a href="https://github.com/sangsongthong-hexterika/AboutMeProfessional" target="_blank" rel="noopener noreferrer">Profile</a>
         </section>
         <section>
         <h2>Contact</h2>
