--- a/cyberlab.html
+++ b/cyberlab.html
@@ -45,7 +45,6 @@
             <section>
                 <h2>Projects</h2>
                 <p>These GitHub repositories showcase my write-ups and walkthroughs from various security labs. They offer step-by-step guides and insights into the penetration testing process, presented in an easy-to-follow, blog-style format.</p>
-                <p>Share GitHub links</p>
                 <ul>
                     <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">Mock Penetration Testing report</a></li>
                     <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">TryHackMe walkthroughs</a></li>
@@ -55,6 +54,12 @@
                     <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">Bugcrowd Profile</a></li>
                     <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">Bug Bounty Report Template</a></li>
                 </ul>
+            </section>
+            <section>
+                <h2>Why Choose Me?</h2>
+                <p></p>
+                <p>See my full qualification: </p>
+                <a href="https://github.com/sangsongthong-hexterika/AboutMeProfessional" target="_blank" rel="noopener noreferrer">Profile</a>
             </section>
             <section>
                 <h2>Contact</h2>
