--- a/designer.html
+++ b/designer.html
@@ -44,6 +44,12 @@
             <a href="https://example.com" target="_blank" rel="noopener noreferrer">Fiverr</a>
         </section>
         <section>
+            <h2>Why Choose Me?</h2>
+            <p></p>
+            <p>See my full qualification: </p>
+            <a href="https://github.com/sangsongthong-hexterika/AboutMeProfessional" target="_blank" rel="noopener noreferrer">Profile</a>
+        </section>
+        <section>
             <h2>Contact</h2>
             <form action="https://formspree.io/f/xovqzgke" method="POST">
                 <label for="name">Name:</label>
