Add a table to the CSS file structure so I know which CSS files works on which HTML files. Change background color of the base.css - not finalized yet. Add section color class on the cyberlab.css so I can add class bg-1 and bg-2 patterns to each section in cyberlab.html. Add background color override from base.css to prevent the base.css color from making my color scheme on my cyberlab.html change since it might. Add different hover and visited effect to the links. Add class bg-1 and bg-2 to cyberlab.html. Clear out redundant <section></section> so the cyberlab.html is cleaner.

--- a/cyberlab.html
+++ b/cyberlab.html
@@ -24,60 +24,58 @@
 
     <!-- Main Content (Grid Layout) -->
     <main>
-        <section>
-            <section>
-                <h1>Hexterika Cyberlab</h1>
-                <p>At Hexterika Cyberlab, I provide ...</p>
-                <p>Basically a short introduction paragraph or a few paragraphs.</p>
-            </section>
-            <section>
-                <h1>Sample Work</h1>
-                <p>Screenshots Snippets</p>
-                <p>Convert the report to PDF for clients to download</p>
-                <p>Share my GitHub link</p>
-            </section>
-            <section>
-                <h1>Service</h1>
-                <p>Brief or full service explanation</p>
-                <p>Coming Soon!</p>
-                <p>Send to Fiverr</p>
-            </section>
-            <section>
-                <h2>Projects</h2>
-                <p>These GitHub repositories showcase my write-ups and walkthroughs from various security labs. They offer step-by-step guides and insights into the penetration testing process, presented in an easy-to-follow, blog-style format.</p>
-                <ul>
-                    <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">Mock Penetration Testing report</a></li>
-                    <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">TryHackMe walkthroughs</a></li>
-                    <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">Port Swigger walkthroughs</a></li>
-                    <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">IT Cybersecurity Oneshots</a></li>
-                    <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">Active Directory Virtual Home Lab 1</a></li>
-                    <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">Bugcrowd Profile</a></li>
-                    <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">Bug Bounty Report Template</a></li>
-                </ul>
-            </section>
-            <section>
-                <h2>Why Choose Me?</h2>
-                <p></p>
-                <p>See my full qualification: </p>
-                <a href="https://github.com/sangsongthong-hexterika/AboutMeProfessional" target="_blank" rel="noopener noreferrer">Profile</a>
-            </section>
-            <section>
-                <h2>Contact</h2>
-                <form action="https://formspree.io/f/xovqzgke" method="POST">
-                    <label for="name">Name:</label>
-                    <input type="text" id="name" name="name" required>
-                    <br>
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required>
-                    <br>
-                    <label for="message">Message:</label>
-                    <textarea id="message" name="message" rows="13" required></textarea>
-                    <br>
-                    <button type="submit">Get In Touch</button>
-                  </form>
-            </section>
+        <section class="bg-1">
+            <h1>Hexterika Cyberlab</h1>
+            <p>At Hexterika Cyberlab, I provide ...</p>
+            <p>Basically a short introduction paragraph or a few paragraphs.</p>
         </section>
-        <section>
+        <section class="bg-2">
+            <h2>Sample Work</h2>
+            <p>Screenshots Snippets</p>
+            <p>Convert the report to PDF for clients to download</p>
+            <p>Share my GitHub link</p>
+        </section>
+        <section class="bg-1">
+            <h2>Service</h2>
+            <p>Brief or full service explanation</p>
+            <p>Coming Soon!</p>
+            <p>Send to Fiverr</p>
+        </section>
+        <section class="bg-2">
+            <h2>Projects</h2>
+            <p>These GitHub repositories showcase my write-ups and walkthroughs from various security labs. They offer step-by-step guides and insights into the penetration testing process, presented in an easy-to-follow, blog-style format.</p>
+            <ul>
+                <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">Mock Penetration Testing report</a></li>
+                <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">TryHackMe walkthroughs</a></li>
+                <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">Port Swigger walkthroughs</a></li>
+                <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">IT Cybersecurity Oneshots</a></li>
+                <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">Active Directory Virtual Home Lab 1</a></li>
+                <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">Bugcrowd Profile</a></li>
+                <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">Bug Bounty Report Template</a></li>
+            </ul>
+        </section>
+        <section class="bg-1">
+            <h2>Why Choose Me?</h2>
+            <p>Something</p>
+            <p>See my full qualification: </p>
+            <a href="https://github.com/sangsongthong-hexterika/AboutMeProfessional" target="_blank" rel="noopener noreferrer">Profile</a>
+        </section>
+        <section class="bg-2">
+            <h2>Contact</h2>
+            <form action="https://formspree.io/f/xovqzgke" method="POST" id="contact_form">
+                <label for="name">Name: </label>
+                <input type="text" id="name" name="name" required>
+                <br>
+                <label for="email">Email: </label>
+                <input type="email" id="email" name="email" required>
+                <br>
+                <label for="message">Message:</label>
+                <textarea id="message" name="message" rows="13" required></textarea>
+                <br>
+                <button type="submit">Get In Touch</button>
+              </form>
+        </section>
+        <section class="bg-1">
             <h2>Social Medias</h2>
             <ul>
                 <li><a href="https://www.linkedin.com/in/sangsongthong-chantaranothai/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
@@ -86,7 +84,7 @@
                 <li><a href="https://github.com/sangsongthong-hexterika" target="_blank" rel="noopener noreferrer">GitHub</a></li>
                 <li><a href="https://tryhackme.com/p/gexter5thm" target="_blank" rel="noopener noreferrer">TryHackMe Profile</a></li>
             </ul>
-            <p>Use icons + hover effect to describe the icons</p>
+        <p>Use icons + hover effect to describe the icons</p>
         </section>
     </main>
         
