Add images into marketing.html. Add class=bg-1 and bg-2 to contact.html, designer.html, index.html, and marketing.html. I haven't made any color changes yet. Wait til the next commit.

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
 
     <!-- Main Content (Grid Layout) -->
     <main>
-        <section>
+        <section class="bg-1">
             <h1>Contact</h1>
             <p>Contact me directly without needing to browse the rest of my website.</p>
             <p>This page is for potential employers who want to contact me directly or for general inquiries.</p>
@@ -37,7 +37,7 @@
             <p><strong><em>For direct phone calls, only serious employment opportunities, please. Maintaining this number comes with extra cost, so I reserve it for job-related contact only.</em></strong></p>
             <p>Please don't hesitate to make contact. I won't bite!</p>
         </section>
-        <section>
+        <section class="bg-2">
             <h2>Reach Me <em>Prefer!</em></h2>
             <form action="https://formspree.io/f/xovqzgke" method="POST">
                 <label for="name">Name:</label>
@@ -52,7 +52,7 @@
                 <button type="submit">Send</button>
               </form>
         </section>
-        <section>
+        <section class="bg-1">
             <h2>Get In Touch: Other Channels!</h2>
                 <ul>
                     <li><a href="https://www.linkedin.com/in/sangsongthong-chantaranothai/" target="_blank" rel="noopener noreferrer"><strong>LinkedIn </strong><em>Prefer!</em></a></li>
