--- a/designer.html
+++ b/designer.html
@@ -24,32 +24,32 @@
 
     <!-- Main Content (Grid Layout) -->
     <main>
-        <section>
+        <section class="bg-1">
             <h1>Hexterika Designer</h1>
             <p>At Hexterika Designer, I provide ...</p>
             <p>Basically a short introduction paragraph or a few paragraphs.</p>
         </section>
-        <section>
+        <section class="bg-2">
             <h2>Sample Works</h2>
             <p>Screenshots Snippets - Use Carosole</p>
             <p>Brief explanation</p>
             <p>Share my Figma links</p>
             <a href="https://example.com" target="_blank" rel="noopener noreferrer">Figma</a>
         </section>
-        <section>
+        <section class="bg-1">
             <h2>Service</h2>
             <p>Brief or full service explanation</p>
             <p>Coming Soon!</p>
             <p>Send to Fiverr</p>
             <a href="https://example.com" target="_blank" rel="noopener noreferrer">Fiverr</a>
         </section>
-        <section>
+        <section class="bg-2">
             <h2>Why Choose Me?</h2>
             <p></p>
             <p>See my full qualification: </p>
             <a href="https://github.com/sangsongthong-hexterika/AboutMeProfessional" target="_blank" rel="noopener noreferrer">Profile</a>
         </section>
-        <section>
+        <section class="bg-1">
             <h2>Contact</h2>
             <form action="https://formspree.io/f/xovqzgke" method="POST">
                 <label for="name">Name:</label>
@@ -64,16 +64,16 @@
                 <button type="submit">Send</button>
               </form>
         </section>
-    <section>
-        <h2>Social Medias</h2>
-        <ul>
-            <li><a href="https://www.linkedin.com/in/sangsongthong-chantaranothai/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
-            <li><a href="https://www.facebook.com/share/1AYY5bVfaa" target="_blank" rel="noopener noreferrer">Facebook</a></li>
-            <li><a href="https://www.instagram.com/hexterika.designer?igsh=MW83dXM4aG92amtrNw==" target="_blank" rel="noopener noreferrer">Instagram</a></li>
-            <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">Dribbble</a></li>
-        </ul>
-        <p>Use icons + hover effect to describe the icons</p>
-    </section>
+        <section>
+            <h2>Social Medias</h2>
+            <ul>
+                <li><a href="https://www.linkedin.com/in/sangsongthong-chantaranothai/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+                <li><a href="https://www.facebook.com/share/1AYY5bVfaa" target="_blank" rel="noopener noreferrer">Facebook</a></li>
+                <li><a href="https://www.instagram.com/hexterika.designer?igsh=MW83dXM4aG92amtrNw==" target="_blank" rel="noopener noreferrer">Instagram</a></li>
+                <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">Dribbble</a></li>
+            </ul>
+            <p>Use icons + hover effect to describe the icons</p>
+        </section>
     </main>
 
     <!-- Footer Section -->
