--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
     <!-- Main Content (Grid Layout) -->
     <main>
-        <section>
+        <section class="bg-1">
             <h1>Welcome to Hexterika Breaks Free</h1>
             <img src="assets/images/hexterika-breaks-free/myProfessionalHeadshot1.jpg" alt="Professional Headshot of Sangsongthong"/>
             <p>Beyond Boundaries — Creative, Secure, and Strategic Services at Hexterika Breaks Free.</p>
             <h2>See My Full Qualification</h2>
             <a href="https://github.com/sangsongthong-hexterika/AboutMeProfessional" target="_blank" rel="noopener noreferrer">About Me Professional</a>
         </section>
-        <section>
+        <section class="bg-2">
             <p>Secure your system at</p>
             <a href="cyberlab.html">Hexterika Cyberlab</a>
             <p>Attract attention to your website with custom design at</p>
