--- a/marketing.html
+++ b/marketing.html
@@ -24,33 +24,36 @@
 
     <!-- Main Content (Grid Layout) -->
     <main>
-        <section>
+        <section class="bg-1">
             <h1>Hexterika Marketing</h1>
             <p>At Hexterika Marketing, I provide ...</p>
             <p>Basically a short introduction paragraph or a few paragraphs.</p>
         </section>
-        <section>
+        <section class="bg-2">
             <h2>Sample Works</h2>
             <p>Screenshots Snippets - Use Carosole</p>
+            <img src="assets/images/marketing/marketing_sample1_17Apr2025.jpg"/>
+            <img src="assets/images/marketing/marketing_sample2_17Apr2025.jpg"/>
+            <img src="assets/images/marketing/marketing_sample3_17Apr2025.jpg"/>
         </section>
-        <section>
+        <section class="bg-1">
             <h2>Service</h2>
             <p>Brief or full service explanation</p>
             <p>Send to Fiverr</p>
             <a href="https://example.com" target="_blank" rel="noopener noreferrer">Site</a>
         </section>
-        <section>
+        <section class="bg-2">
             <h2>Projects</h2>
             <p>Add screenshots</p>
         </section>
-        <section>
+        <section class="bg-1">
             <h2>Why Choose Me?</h2>
             <p></p>
             <p>See my full qualification: </p>
             <a href="https://github.com/sangsongthong-hexterika/AboutMeProfessional" target="_blank" rel="noopener noreferrer">Profile</a>
         </section>
-        <section>
-        <h2>Contact</h2>
+        <section class="bg-2">
+            <h2>Contact</h2>
             <form action="https://formspree.io/f/xovqzgke" method="POST">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
@@ -63,16 +66,16 @@
                 <br>
                 <button type="submit">Send</button>
             </form>
-    </section>
-    <section>
-        <h2>Social Medias</h2>
-        <ul>
-            <li><a href="https://www.linkedin.com/in/sangsongthong-chantaranothai/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
-            <li><a href="https://example.com/" target="_blank" rel="noopener noreferrer">Facebook</a></li>
-            <li><a href="https://example.com/" target="_blank" rel="noopener noreferrer">Instagram</a></li>
-        </ul>
-        <p>Use icons + hover effect to describe the icons</p>
-    </section>
+        </section>
+        <section class="bg-1">
+            <h2>Social Medias</h2>
+            <ul>
+                <li><a href="https://www.linkedin.com/in/sangsongthong-chantaranothai/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+                <li><a href="https://example.com/" target="_blank" rel="noopener noreferrer">Facebook</a></li>
+                <li><a href="https://example.com/" target="_blank" rel="noopener noreferrer">Instagram</a></li>
+            </ul>
+            <p>Use icons + hover effect to describe the icons</p>
+        </section>
     </main>
 
     <!-- Footer Section -->
